--- a/app1/templates/receipt_voucher.html
+++ b/app1/templates/receipt_voucher.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 {% load static %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
 <style>
 
@@ -217,7 +218,7 @@
                         
                         <td colspan="18" style="border: none;">
                             <select id="payacc1"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;"
-                                onchange="changeCurbalance();" >
+                                onchange="changeCurbalance(this);" >
                                 <option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option> 
                                 {% for i in ledg_all %}
                                 <option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> 
@@ -554,6 +555,18 @@
 <script src="https://code.jquery.com/jquery-3.6.3.min.js" ></script>
 
 <script type="text/javascript">
+
+    /*----------------- create new row----&---change current balance while entering amount------*/
+function createRow(){
+    id = $('.payacc').length;
+    $(".part").append('<tr style="border: none;"><td colspan="18" style="border: none;" class="mt-4"><select id="payacc'+id+'"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance(this);" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label><label class = "blnc1" id="blnc'+id+'" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc'+id+'" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="2" class="text-right mt-0" style="border: none; "><input type="number" class = "txt amnt" id= "amnt'+id+'" name = "amnt[]" oninput="calculateTotal();" onchange="showTransaction();"><button type="button" class="butn" id = "butn'+id+'"  onclick="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td></tr>');
+
+
+       
+}
+
+/*----------------- create new row-------------*/
+
 /*-----------------------set current balance-----------*/
 
 
@@ -584,25 +597,25 @@ $("#payacc").change(function () {
 
 
 
-function changeCurbalance(){
+function changeCurbalance(id){
 
-    const id1 = $(this).attr("id")
-    const parid =$('#payacc'+id1).val();
+    // const id1 = $(this).attr("id")
+    // const parid =$('#payacc'+id1).val();
     //console.log(id1);
     //console.log('#blnc'+id1)
+    const id1 = $(id).attr('id').slice(-1);
 
     $.ajax({
         url: '{% url "cur_balance" %}',
         data: {
-                'id': parid
+                'id': $(id).val(),
         },
         
         success: function (data) {
             if(data[0].current_blnc_type == 'Dr'){       
-            curData1 = '<input id ="pled" class= "txt" readonly value = '+ data[0].current_blnc +'> <input id ="pledt" class= "txt" readonly value = '+data[0].current_blnc_type+'>';}
+                curData1 = '<input id ="pled'+id1+'" class= "txt" readonly value = '+ data[0].current_blnc +'> <input id ="pledt'+id1+'" class= "txt" readonly value = '+data[0].current_blnc_type+'>';}
             else{
-            curData1 = '<input id ="pled" class= "txt" readonly value = '+ data[0].current_blnc +' style="color: red;"> <input id ="pledt" style="color: red;"  class= "txt" readonly value = '+data[0].current_blnc_type+'>';}
-            //console.log(curData);
+                curData1 = '<input id ="pled'+id1+'" class= "txt" readonly value = '+ data[0].current_blnc +' style="color: red;"> <input id ="pledt'+id1+'" style="color: red;"  class= "txt" readonly value = '+data[0].current_blnc_type+'>';}
             $("#blnc"+id1).html(curData1);
         }
         
@@ -613,18 +626,6 @@ function changeCurbalance(){
 /*-----------------------set current balance-----------*/
 
 
-/*----------------- create new row----&---change current balance while entering amount------*/
-var id = 1
-function createRow(){
-
-    id++;
-    $(".part").append('<tr style="border: none;"><td colspan="18" style="border: none;" class="mt-4"><select id="payacc'+id+'"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance();" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label><label class = "blnc1" id="blnc'+id+'" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc'+id+'" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="2" class="text-right mt-0" style="border: none; "><input type="number" class = "txt amnt" id= "amnt'+id+'" name = "amnt[]" oninput="calculateTotal();" onchange="showTransaction();"><button type="button" class="butn" id = "butn'+id+'"  onclick="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td></tr>');
-
-
-       
-}
-
-/*----------------- create new row-------------*/
 
 /*--------- Total----------*/
 
@@ -646,7 +647,7 @@ function calculateTotal() {
 
 function setClosing(){
 
-    console.log('Set Value');
+    id = $('.amnt').length;
 
     const ac = $('#payacc').val().split(',')[0];
     const curblnc = $('#led').val();
@@ -670,25 +671,28 @@ function setClosing(){
         });
 
     
-              
     const pac = $('#payacc'+id).val();
-    const curblnc1 = $('#pled').val();
-    const curblnct1 = $('#pledt').val();
-    //console.log(curblnc1);
+    const curblnc1 = $('#pled'+id).val();
+    const curblnct1 = $('#pledt'+id).val();
+    console.log(pac);
+    console.log(curblnc1);
+    
     $.ajax({
         url: '{% url "receipt_pcur_balance_change" %}',
         data: {
                 'curblnc': curblnc1,
-                'amount' : amount,
+                'amount' : amount1,
                 'curblnct': curblnct1,
                 'pac' : pac,
         },
         
         success: function (data) {
-
-            $("#blnc"+(id-1)).html(data);
-            //console.log('#blnc'+id);
-        }
+            
+            $("#blnc"+(id)).html(data);
+            // console.log('#blnc'+id);
+            // console.log(data)
+        }          
+    
     
     });
 
