--- a/app1/templates/receipt_voucher.html
+++ b/app1/templates/receipt_voucher.html
@@ -559,7 +559,7 @@
     /*----------------- create new row----&---change current balance while entering amount------*/
 function createRow(){
     id = $('.payacc').length;
-    $(".part").append('<tr style="border: none;"><td colspan="18" style="border: none;" class="mt-4"><select id="payacc'+id+'"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance(this);" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label><label class = "blnc1" id="blnc'+id+'" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc'+id+'" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="2" class="text-right mt-0" style="border: none; "><input type="number" class = "txt amnt" id= "amnt'+id+'" name = "amnt[]" oninput="calculateTotal();" onchange="showTransaction();"><button type="button" class="butn" id = "butn'+id+'"  onclick="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td></tr>');
+    $(".part").append('<tr style="border: none;"><td colspan="18" style="border: none;" class="mt-4"><select id="payacc'+id+'"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance(this);" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label><label class = "blnc1" id="blnc'+id+'" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc'+id+'" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="2" class="text-right mt-0" style="border: none; "><input type="number" class = "txt amnt" id= "amnt'+id+'" name = "amnt[]" oninput="calculateTotal();" onchange="showTransaction();"> <button type="button" class="butn" id = "butn'+id+'"  onclick="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td></tr>');
 
 
        
@@ -612,6 +612,7 @@ function changeCurbalance(id){
         },
         
         success: function (data) {
+            // console.log(data[0])
             if(data[0].current_blnc_type == 'Dr'){       
                 curData1 = '<input id ="pled'+id1+'" class= "txt" readonly value = '+ data[0].current_blnc +'> <input id ="pledt'+id1+'" class= "txt" readonly value = '+data[0].current_blnc_type+'>';}
             else{
@@ -648,7 +649,7 @@ function calculateTotal() {
 function setClosing(){
 
     id = $('.amnt').length;
-
+    console.log(id);
     const ac = $('#payacc').val().split(',')[0];
     const curblnc = $('#led').val();
     const curblnct = $('#ledt').val();
@@ -674,8 +675,8 @@ function setClosing(){
     const pac = $('#payacc'+id).val();
     const curblnc1 = $('#pled'+id).val();
     const curblnct1 = $('#pledt'+id).val();
-    console.log(pac);
-    console.log(curblnc1);
+    // console.log(pac);
+    // console.log(curblnc1);
     
     $.ajax({
         url: '{% url "receipt_pcur_balance_change" %}',
@@ -688,8 +689,8 @@ function setClosing(){
         
         success: function (data) {
             
-            $("#blnc"+(id)).html(data);
-            // console.log('#blnc'+id);
+            $("#blnc"+(id-1)).html(data);
+            // console.log('#blnc'+(id-1));
             // console.log(data)
         }          
     
@@ -697,6 +698,16 @@ function setClosing(){
     });
 
     id++;
+
+}
+
+
+/************** close pop up form*****************/
+
+function closeForm() {
+
+document.getElementById("trs_type").style.display = "none";
+
 
 }
 
@@ -709,6 +720,7 @@ function showTransaction(){
     var val_name = id. split(",")[1];
     var val_under = id.split(",")[2];
     var value1,e;
+    // console.log(val_name)
 
     if (val_under.trim() === "Bank_Accounts"){
 
@@ -753,15 +765,18 @@ function showTransaction(){
 
 
 /*---------------------cheque range display--&---show cheque number automatically-------------------------*/
+
+// console.log($("#chacc").text());
 $.ajax({
         
         url: '{% url "cheque_range" %}',
+        type: 'POST',
         data: {
                 'account_name' : $("#chacc").text(),
-                //csrfmiddlewaretoken: '{{ csrf_token }}'
+                csrfmiddlewaretoken: '{{ csrf_token }}'
         },
         success: function (data) {
-            //console.log(data)
+            // console.log(data[0])
             if(data[0] != 0){
                 chrange = '<label>&nbsp;&nbsp;&nbsp;&nbsp;'+data[0]+'</label><label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label><label>'+ data[1]+'</label>'
             }
@@ -819,8 +834,8 @@ const vouch_id = $('#idlbl').val();
 const vouchtype = $('#vouchtype').text();
 
 if ($("#t_type").text() === 'Cheque'){
-    console.log("cheque");
-    console.log($("#chdate").val());
+    // console.log("cheque");
+    // console.log($("#chdate").val());
     $.ajax({
                 type : 'POST',
                 url:"{% url 'bank_transaction' %}",
@@ -843,7 +858,7 @@ if ($("#t_type").text() === 'Cheque'){
                 },
                 
                 success: function(response) {
-                    console.log(response.message)
+                    // console.log(response.message)
                     if(response.message === 'success'){
                         $('#modalForm')[0].reset();
                     
@@ -854,8 +869,8 @@ if ($("#t_type").text() === 'Cheque'){
             });
 }
 else if($("#t_type").text() === 'e-Fund Transfer'){
-    console.log("e-f");
-    console.log($("#efdate").val());
+    // console.log("e-f");
+    // console.log($("#efdate").val());
 
     $.ajax({
                 type : 'POST',
@@ -888,8 +903,8 @@ else if($("#t_type").text() === 'e-Fund Transfer'){
 }
 else{   
     // console.log($("#partid").val());
-    console.log("others");
-    console.log($("#instdate").val());
+    // console.log("others");
+    // console.log($("#instdate").val());
 
     $.ajax({
                 type : 'POST',
