--- a/app1/templates/stock_item_creation.html
+++ b/app1/templates/stock_item_creation.html
@@ -280,7 +280,7 @@
                         <option onclick="setAvailable('Not Applicable')" class="btns_prnt" value="Not Applicable">&nbsp;&nbsp;&nbsp;Not Applicable</option>
 
                         {% for un in u %}
-                        <option onclick="setvalue1 ('{{un.symbol}} ({{un.formal_name}})','{{un.id}}')" id="un" class="btns_prnt">&nbsp;&nbsp;
+                        <option onclick="setvalue1 ('{{un.id}}')" id="un" class="btns_prnt">&nbsp;&nbsp;
                             {{ un.symbol }} ( {{ un.formal_name }} )
                         </option>
                             
